src/assets/styles/style.scss
/* ... */
.show-more-btn {
    opacity: 0;
    @include fc(0);
    width: 30px;
    height: 30px;
    position: absolute;
    top: 15px;
    right: 15px;
    background: hsla(0, 0%, 0%, 0.7);
    border-radius: 50%;
    transition: 150ms;
    padding: 3px;
    z-index: 1;

    &:hover{
        transform: scale(1.15);
    }

    img {
        max-width: 30px;
        max-height: 30px
    }
}

.more-options {
    @include fcs(0);
    background: hsla(0, 0%, 0%, 0.7);
    padding: 100px 15px 15px 15px;
    position: absolute;
    top: 0;
    right: 0;
    transform: scale(0);
    transform-origin: top right;
    transition: 300ms ease;
    opacity: 0;
    border-radius: 25%;
    width: 100%;
    height: 100%;
    cursor: default;

    button {
        padding: 15px 5px;
        display: flex;
        justify-content: start;
        align-items: center;
        gap: 5px;
        color: $primary-color;
        font-weight: 900;
        line-height: 1.3rem;
        letter-spacing: 1px;
        font-size: 0.9rem;
        text-align: start;
        height: 60px;
        width: 100%;
        transition: 150ms;

        &:hover img{
            transform: scale(1.15);
        }

        img {
            transition: 150ms;
            max-width: 40px;
            max-height: 40px;
        }
    }
}

.more-options.show {
    transform: scale(1);
    opacity: 1;
    border-radius: 0;
}

.more-options.hide {
    transform: scale(0);
    opacity: 0;
}


@media screen and (max-width: 768px) {
    .data-container {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        gap: 5px;

        .data-wrapper {
            width: 100%;
            height: auto;

            &::before {
                display: none;
            }

            .data {
                width: 100%;
                height: auto;

                img {
                    height: auto;
                }

                h3 {
                    font-size: 1rem;
                }
            }
        }
    }

    #home{
        .data-container {
            @include fs(10px);
            flex-wrap: nowrap;
            overflow-x: auto;
            width: 100%;
            scrollbar-width: none;
            &::-webkit-scrollbar{
                display: none;
            }
            .data-wrapper{
                min-width: 200px;
                .data{
                    min-width: 200px;
                }
            }
        }
    }

    .show-more-btn {
        opacity: 1;
    }
}

@media screen and (max-width: 485px) {
    .data-container{
        grid-template-columns: 1fr 1fr
    }
}

.data-page {
    position: relative;
    @include fcs(15px);
    width: 100%;
    min-height: 100vh;
    padding: 25px;
    overflow: hidden;

    .buttons{
        @include fc(15px);
        button{
            @include fc(5px);
            background: hsla(0, 0%, 10%, 0.5);
            color: $primary-color;
            border: 2px solid $primary-color;
            border-radius: 50px;
            padding: 10px 15px;
            font-size: 1rem;
            font-weight: 600;
            transition: 200ms;
            &:hover{
                color: #fff;
                border-color: #fff;
            }
        }
    }

    .data-background {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        opacity: .3;
        z-index: -1;
        pointer-events: none;
    }

    .show-title {
        @include fcs(0);

        h1 {
            font-size: 2.8rem;
            font-weight: 400;
            color: #fff;
        }

        h4 {
            font-weight: 400;
            color: #888;
            font-size: 1.2rem;
        }
    }

    .data-info {
        @include fs(15px);
        width: 100%;

        .data-img {

            .data-img-wrapper {
                width: 400px;
                height: 600px;
                @include placeholder();

                img {
                    border-radius: 10px;
                }
            }
        }

        .data-overview {
            @include fcs(12px);
            text-align: start;
            align-self: start;

            p {
                line-height: 1.7rem;
            }
        }
    }

    .genres {
        @include fs(0);
        flex-wrap: wrap;

        .genre-tag {
            padding: 5px 10px;
            margin: 7px 15px 7px 0;
            background: hsla(0, 0%, 20%, 0.5);
            border: 1px solid #fff;
            border-radius: 50px;
        }
    }

    .director {
        margin-right: 15px;
    }

    .rating {
        @include fc(0);
        text-align: center;

        p {
            color: $primary-color;
            font-size: 2rem;
            transition: all 0.3s ease;
            text-wrap: nowrap;
            font-weight: 900;

            span {
                font-size: 1.1rem;
                color: #fff;
                margin-left: 7px;
                font-weight: normal;
            }
        }
    }


    .trailer {
        width: 100%;

        .trailer-wrapper {
            width: 100%;
            aspect-ratio: 16/9;
            @include placeholder();

            iframe {
                aspect-ratio: 16/9;
                border: none;
                width: 100%;
            }
        }
    }
}

@media screen and (max-width: 1000px) {
    .data-page {
        @include fcs(15px);
        padding: 15px;

        .buttons{
            align-self: center;
        }

        .data-info {
            @include fcc(15px);
            align-self: center
        }

        .show-title {
            @include fcc(0);
            text-align: center;
            align-self: center;
        }
    }
}
/* ... */

